# trading_dss

./: .env.example  .gitignore  README.md  _validate_news.py  pyproject.toml  requirements.txt
config/: __init__.py  companies.json  constants.py  events_calendar.json  indices.json  logging_config.py  news_mappings.json  rss_feeds.json  sentiment_keywords.json  settings.py
scripts/: run_api.py  run_backtest.py  run_data_collector.py  seed_historical.py  validate_config.py  validate_impact_mapper.py  validate_news.py  validate_smart_money.py  verify_aggregator.py  verify_news_pipeline.py  verify_phase2_manual.py
src/: __init__.py
src/alerts/: __init__.py  telegram_bot.py
src/analysis/: __init__.py  anomaly_detector.py  indicator_store.py  news_engine.py  options_analysis.py  sector_analyzer.py  technical.py  technical_aggregator.py
src/api/: app.py  (+1 more)
tests/: __init__.py  conftest.py  test_analysis.py  test_article_parser.py  test_bse_scraper.py  test_data_collector.py  test_data_validator.py  test_deduplicator.py  test_engine.py  test_event_calendar.py  test_historical_data.py  test_impact_mapper.py  test_index_registry.py  test_integration.py  test_integration_phase2.py  test_integration_phase3.py  test_market_hours.py  test_momentum_indicators.py  test_news_engine.py  test_nse_scraper.py  test_options_chain.py  test_options_indicators.py  test_quant_indicators.py  test_rss_fetcher.py  test_sentiment_analyzer.py  test_smart_money_indicators.py  test_technical.py  test_technical_aggregator.py  test_time_decay.py  test_trend_indicators.py  test_volume_indicators.py
(+47 files in other folders)
